--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 .main {
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+	height: 100%;
 	overflow: hidden;
 	align-items: center;
 	justify-content: center;
